welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday = true || vacation = true) {
                    ^sleepIn:3: error: reassignment to val
		sleepIn = true
                        ^sleepIn:5: error: reassignment to val
		sleepIn = false
                        ^